--- a/src/partials/bloom.html
+++ b/src/partials/bloom.html
@@ -1,9 +1,12 @@
 <section class='section'>
     <div class="container">
         <div class="bloom-header">
-            <div class="vidget">
-                <img src="./images/vidget/learn.png" width="40">
+            <div class="vidget learn remember__mode">
+                <!-- <img src="./images/vidget/learn.png" width="40">
+            -->     <div class="done">
+
             </div>
+                </div> 
             <div class="thumb">
                 <h1 class="section-title skill-up">Developing of Self Learning Skills</h1>
                 <h2 class="aim">Learn what is Bloom Taxonomy and how to use it.</h2>
