--- a/src/sass/layout/_bloom_study-modes.scss
+++ b/src/sass/layout/_bloom_study-modes.scss
@@ -75,8 +75,8 @@
 }
 
 .set-icon{
-    stroke: $darkBrownColor;
-    fill: $yellowColor;
+    
+    fill: white;
     width: 90%;
     height: 90%;
    
@@ -89,9 +89,9 @@
     width: 60px;
     height: 60px;
 
-    background-color: white;
-    border-radius: 50%;
-    border: 3px solid $darkBrownColor;
+    // background-color: $darkBrownColor;
+    // border-radius: 50%;
+    // border: 3px solid $darkBrownColor;
 }
 
 
