--- a/src/sass/compon/_icon.scss
+++ b/src/sass/compon/_icon.scss
@@ -1,3 +1,26 @@
+.icon{
+    display: inline-block;
+   
+
+    width: 100%;
+    height: 100%;
+    //stroke: white;
+    fill: rgb(243, 208, 9);
+    &:hover, &:focus{
+       // stroke: green;
+        fill: rgb(32, 20, 2);  
+    }
+}
+
+.icon-wrap{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 3px;
+
+    width: 38px;
+    height: 38px;
+}
 
 .menu-btn{
     display: inline-block;
