--- a/src/partials/lesson-plan.html
+++ b/src/partials/lesson-plan.html
@@ -1,6 +1,41 @@
 <section class="section lesson-plan__section">
     <div class="container lesson-plan__container">
-        
+        <div class="lesson__stats"><svg class="section-icon s" width="48" height="48">
+            <use href="./images/icon.svg#icon-timetable"></use>
+        </svg>
+            SUBJECT: English | CLASS: 6 | NUMBER: 34 | DATE: 09.11.2022 | STATUS: undone
+        </div>
+        <ul class="main-info__list">
+            <li class="main-info__item">
+                    <h3 class="category__title"><svg class="section-icon s" width="48" height="48">
+                        <use href="./images/icon.svg#icon-home"></use>
+                    </svg>name:</h3>
+                    <h1 class="lesson__name">My Eating Habits</h1>
+            </li>
+            <li class="main-info__item main-info__header">
+                <h3 class="category__title"><svg class="section-icon s" width="48" height="48">
+                    <use href="./images/icon.svg#icon-estimate"></use>
+                </svg>goals:</h3>
+ 
+                <p class="main-info__content">Write a message about your eating habits</p>
+                <p class="main-info__content">Write a message about your eating habits</p>
+                <p class="main-info__content">Write a message about your eating habits</p>
+           
+           
+            </li>
+            <include src="./partials/recentlinks.html"></include>
+            <div class="skills__icons--decor">
+                <!-- <img src="./images/status-icons/complete.png" width="35"> -->
+            </div>
+            <div class="skills__icons--decor">
+                <!-- <img src="./images/status-icons/complete.png" width="35"> -->
+            </div>
+            <!-- <li class="main-info__item">
+                <h3 class="category__title">reference:</h3>
+                <p class="main-info__content">Manual A Karpuk for the 6-th form</p>
+            </li> -->
+            
+        </ul>
         <!-- active lesson part -->
         <div class="img__top">
             <h2 class="lesson-part__title--active">Start
@@ -9,7 +44,7 @@
         </p>
             </div>
         <div class="lesson__img">
-            <img src="./images/layout-components/lesson.png" width="800">
+            <!-- <img src="./images/layout-components/" width="800"> -->
         </div>
         <div class="img__bottom">
             <ul class="lesson-part__instructions">
