--- a/src/partials/recentlinks.html
+++ b/src/partials/recentlinks.html
@@ -2,24 +2,16 @@
     <div class="container">
             <ul class="recent-links">
                 <li class="section-icon-wrap">
-                    <svg class="section-icon rotate45" width="48" height="48">
-                        <use href="../images/icon.svg#icon-link"></use>
-                    </svg>
-                    <h4 class="recent-link-title it-font">Useful Links</h4>
+                    
+                    <h4 class="recent-link-title it-font"><svg class="section-icon rotate45 s" width="48" height="48">
+                        <use href="./images/icon.svg#icon-link"></use>
+                    </svg>Useful Links:</h4>
                 </li>
                 <li><a class="recent-link it-font"href="https://www.youtube.com/" title="URL adress"> https://www.youtube.com/</a>
                 </li>
                 <li> <a class="recent-link it-font" href="https://www.google.com.ua/"> https://www.google.com.ua/</a>
                 </li>
                 <li><a class="recent-link it-font" href="https://translate.google.com/">  https://translate.google.com/ </a></li>
-                <li class="section-icon-wrap">
-                     <svg class="section-icon rotate45" width="48" height="48">
-                    <use href="../images/icon.svg#icon-find"></use>
-                </svg>
-                <h4 class="recent-link-title it-font">Find with a Browser</h4>
-            </li>
-                <li><a class="recent-link it-font" href="#">  Ph7: Project </a></li>
-                <li><a class="recent-link it-font" href="#">  E5: Listening </a></li>
-            </ul>
+                
     </div>
 </section> 
