--- a/src/sass/layout/_lesson-plan.scss
+++ b/src/sass/layout/_lesson-plan.scss
@@ -6,7 +6,7 @@
     border-right: 3px solid tomato;
     border-left: 3px solid tomato;
 
-    background-color: lightgray;
+    background-color: $yellowColor;
 
     position: relative;
     padding-top: 5px;
