--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,87 +1,9 @@
 <section class="hero-section home__bg">
     <div class="container">
-        <div class="hero-content">
-
-
-                <!-- Name -->
-                <div class="section-thumb">
-                    <div class="flex-row">
-                        <button type="button" class="menu-btn-ava" data-popup-open>
-                            <svg class="menu-icon-ava"  width="48" height="48">
-                                <!-- <use href="../images/icon.svg#icon-steps"></use> -->
-                                <use href="../images/icon.svg#icon-avaAlice"></use>
-                            </svg>
-                        </button>
-                        <h1 class="section-title skill-up">
-                            Starting work with a site</h1>
-                        <svg class="section-icon object-icon" width="48" height="48">
-                            <use href="../images/icon.svg#icon-avaAlice"></use>
-                        </svg>
-                    </div>
-
-
-                <!-- To do -->
-
-                    <div class="flex-row remember__mode">
-                       
-                        <svg class="section-icon " width="48" height="48">
-                            <use href="../images/icon.svg#icon-timetable"></use>
-                        </svg>
-                        <h2 class="section-aim ">Learn what is index.html</h2>
-
-                    </div>
-
-
-                    
-
-
-              <!-- section info  it-->
-             
-                    
-                   
-
-                    <div class="flex-column remember__mode">
-                         <!-- title -->
-                        <div class="flex-row remember__mode">
-                            <h3 class="section-info-title it-font remember__mode">Homepage, what?..</h3>
-                            <svg class="section-icon menu-icon" width="48" height="48">
-                                <use href="../images/icon.svg#icon-it"></use>
-                            </svg>
-                        </div>
-                         <!-- text-->
-                        <p class="section-info it-font">index.html is the main page of a site. It has got the basic information about the site </p>
-                        
-                    </div>
-
-
-                    <!--  section info  learning-->
-                    
-    
-   
-                       <!-- section info  conspect-->
-                    <div class="flex-column remember__mode">
-                        <!-- title -->
-                        <div class="flex-row">
-                            <h3 class="section-info-title handwritten-font">The most popular text in the word</h3>
-                            <svg class="section-icon menu-icon" width="48" height="48">
-                                <use href="../images/icon.svg#icon-docs"></use>
-                            </svg>
-                        </div>
-                        <!-- text-->
-                        <p class = "handwritten-font">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, error a! Tempore perferendis quos officia molestias doloribus quibusdam ullam dolorem sint</p> 
-                       
-                   </div>
-
-
-                          
-                        
-                    
-                
-                </div>
-              
-                
-        
+        <div class="hero-container">
+            <include src="./partials/mentor.html"></include>
         </div>
+        
     </div>
 </section>
 
@@ -89,119 +11,3 @@
 <!-- from it hero -->
 
 
-<section class="hero-section gadget__bg">
-    <div class="container">
-        <div class="hero-content">
-
-
-            <div class="flex-column">
-
-                <div class="hero-top-menu">
-                    <div class="hero-top-menu">
-                        <ul class="steps">
-                            <li class="step-first">
-                                <svg class="steps-icon rotate90" width="48" height="48">
-                                    <use href="../images/icon.svg#icon-steps"></use>
-                                </svg>
-        
-                            </li>
-                            <li class="step done"><a class="step-link" href="#">
-                                <svg class="steps-icon" width="48" height="48">
-                                    <use href="../images/icon.svg#icon-home"></use>
-                                </svg>
-                                </a>
-                            </li>
-                            <li class="step done"><a class="step-link" href="#">
-                                <svg class="steps-icon" width="48" height="48">
-                                    <use href="../images/icon.svg#icon-it"></use>
-                                </svg></a></li>
-                            
-                            <li class="step processing"> <a class="step-link" href="#">
-                                <svg class="steps-icon" width="48" height="48">
-                                    <use href="../images/icon.svg#icon-timetable"></use>
-                                </svg>
-                                </a>
-                            </li>
-                            <li class="step undone"><a class="step-link" href="#">
-                                <svg class="steps-icon" width="48" height="48">
-                                    <use href="../images/icon.svg#icon-guide"></use>
-                                </svg>
-                                </a></li>
-                            <li class="step undone"><a class="step-link" href="#">
-                                <svg class="steps-icon" width="48" height="48">
-                                    <use href="../images/icon.svg#icon-docs"></use>
-                                </svg>
-                                </a></li>
-                           
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- Name -->
-                <div class="section-thumb">
-                    <div class="flex-row">
-                        <h1 class="section-title skill-up">Starting work with a site</h1>
-                        <svg class="section-icon object-icon" width="48" height="48">
-                            <use href="../images/icon.svg#icon-home"></use>
-                        </svg>
-                    </div>
-
-                <!-- To do -->
-
-                    <div class="flex-row">
-                       
-                        <svg class="section-icon remember__mode" width="48" height="48">
-                            <use href="../images/icon.svg#icon-timetable"></use>
-                        </svg>
-                        <h2 class="section-aim">Learn what is index.html</h2>
-                    </div>
-
-
-              <!-- section info  it-->
-             
-                    
-                   
-
-                    <div class="flex-column remember__mode">
-                         <!-- title -->
-                        <div class="flex-row remember__mode">
-                            <h3 class="section-info-title it-font remember__mode">Homepage, what?..</h3>
-                            <svg class="section-icon menu-icon" width="48" height="48">
-                                <use href="../images/icon.svg#icon-it"></use>
-                            </svg>
-                        </div>
-                         <!-- text-->
-                        <p class="section-info it-font">index.html is the main page of a site. It has got the basic information about the site </p>
-                        
-                    </div>
-
-
-                    <!--  section info  learning-->
-                    
-    
-   
-                       <!-- section info  conspect-->
-                    <div class="flex-column remember__mode">
-                        <!-- title -->
-                        <div class="flex-row">
-                            <h3 class="section-info-title handwritten-font">The most popular text in the word</h3>
-                            <svg class="section-icon menu-icon" width="48" height="48">
-                                <use href="../images/icon.svg#icon-docs"></use>
-                            </svg>
-                        </div>
-                        <!-- text-->
-                        <p class = "handwritten-font">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, error a! Tempore perferendis quos officia molestias doloribus quibusdam ullam dolorem sint</p> 
-                       
-                   </div>
-
-
-                          
-                        
-                    
-                </div>
-              
-                <button class="button" type="button" data-modal-open>Замовити послугу. Order service</button>
-            </div>
-        </div>
-    </div>
-</section>
