--- a/src/partials/progressbar.html
+++ b/src/partials/progressbar.html
@@ -1,11 +1,11 @@
 
-<section class="section">
+<section class="section recent-links">
     <div class="container">
         <div class="hero-top-menu">
             <ul class="steps">
                 <li class="step-first">
-                    <svg class="steps-icon s rotate90" width="48" height="48">
-                        <use href="./images/icon.svg#icon-steps"></use>
+                    <svg class="steps-icon s rotate180" width="48" height="48">
+                        <use href="./images/icon.svg#icon-exlamation"></use>
                     </svg>
         
                 </li>
