--- a/src/sass/compon/_steps.scss
+++ b/src/sass/compon/_steps.scss
@@ -46,27 +46,26 @@
     justify-content: center;
 
     //border: 3px solid white;
-    padding: 7px;
+    padding: 1px;
     border-radius: 50%;
     //border: 3px solid white;
-    border-width: 3px;
+    border-width: 1px;
     border-style: solid;
-   // border-color: conic-gradient(green 20%, $darkBrownColor 0);
+   border-color: white;
 
-    height: 58px;
-    width: 58px;
+    height: 28px;
+    width: 28px;
 
   //  background: url(../images/icons/flower.svg), conic-gradient(green 20%, $darkBrownColor 0);
 
    // background-image: url(../images/icons/flower.svg);
-    background-repeat: no-repeat;
-    background-position: center;
+    //background-repeat: no-repeat;
+    //background-position: center;
     //background-size: 54px 54px;
 
     & .steps-icon{
         fill: white;
-        // stroke: $yellowColor;
-        // stroke-width: 2px;
+
     }
 }
 
@@ -75,19 +74,17 @@
 
 .step{
     position: relative;
-    padding: 7px;
+    padding: 3px;
     display: flex;
     align-items: center;
     justify-content: center;
 
-    border: 1px solid white;
     padding: 2px;
-    border-radius: 7px;
-
+    
     width: 32px;
     height: 32px;
 
-    & ::after{
+    &::after{
         content: "";
         position: absolute;
         top: 0;
@@ -96,9 +93,9 @@
         // display: inline-block;
         width: 16px;
         height: 16px;
-        background-color: rgba($color: #099e15, $alpha: 0.5);
+        background-color: white;
         border: 1px solid white;
-
+        border-radius: 50%;
         display: none;
     }
    
@@ -151,7 +148,7 @@
 }
 
 .done{
-    border: 1px solid green;
+    
 
     & .steps-icon{
         fill: green;
@@ -166,21 +163,22 @@
         display: inline-block;
         width: 16px;
         height: 16px;
-        background-color: white;
+        
+        border-radius: 50%;
+        background-color: green;
         border: 1px solid green;
         background-image: url(../images/icons/icon-done.svg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: 10px 10px;
-
-        border-radius: 4px;
     }
 
 }
 
 .processing{
-    background-color: yellow;
-    border: 1px solid yellow;
+    background-color: tomato;
+    border: 1px solid white;
+    border-radius: 50%;
     &::after{
         content: "";
         position: absolute;
@@ -192,7 +190,6 @@
         height: 16px;
         background-color: white;
         border: 1px solid yellow;
-        background-image: url(../images/icons/gears.svg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: 10px 10px;
@@ -202,24 +199,24 @@
 }
 
 .undone{
-    &::after{
-        content: "";
-        position: absolute;
-        top: 0;
-        right: -30%;
+    // &::after{
+    //     content: "";
+    //     position: absolute;
+    //     top: 0;
+    //     right: -30%;
 
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        background-color: white;
-        //border: 1px solid white;
-        background-image: url(../images/icons/question.svg);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: 10px 10px;
+    //     display: inline-block;
+    //     width: 16px;
+    //     height: 16px;
+    //     background-color: white;
+    //     //border: 1px solid white;
+    //     background-image: url(../images/icons/question.svg);
+    //     background-repeat: no-repeat;
+    //     background-position: center;
+    //     background-size: 10px 10px;
 
-        border-radius: 4px;
-    }
+    //     border-radius: 4px;
+    // }
 }
 
 .step-link-title{
