--- a/src/partials/gadget.html
+++ b/src/partials/gadget.html
@@ -1,7 +1,7 @@
 <section class="hero-section gadget__bg">
     <div class="container">
         <div class="hero-content">
-            <include src="./partials/mentor.html"></include>
+            <include src="./thumb_readme.html"></include>
        </div>
     </div>
 </section>
