--- a/src/sass/compon/_icon.scss
+++ b/src/sass/compon/_icon.scss
@@ -213,8 +213,23 @@
     }
 }
 
-
+// точка - символ - чекбокс - інструмент - обєкт
 .s{
-    width: 14px;
-    height: 14px;
+    width: 12px;
+    height: 12px;
+}
+// довжина - символ - кнопка - вміння - навичка
+.m{
+    width: 18px;
+    height: 18px;
+}
+// площа - іконка самбнейла - прогресбар - вміння
+.l{
+    width: 32px;
+    height: 32px;
+}
+// обєм - зображення картки - стаття пояснення - форма
+.xl{
+    width: 48px;
+    height: 48px;
 }
