--- a/src/partials/timetablepar.html
+++ b/src/partials/timetablepar.html
@@ -1,10 +1,6 @@
 <section class="section timetable__section">
     <div class="container timetable__container">
-        <div class="thumb">
-            <h1 class="section-title skill-up">Developing of Organizing Skills</h1>
-            <h2 class="aim">Learn what is Timetable.</h2>
-            <p class="info">Timetable is Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis ipsa fugiat porro dolorem obcaecati debitis ea, assumenda voluptate ad totam, saepe ducimus! Est autem fugit reprehenderit velit. Consequatur, debitis assumenda..</p>
-        </div>
+        <include src="./partials/article-header-t.html"></include>
        
         <div class="timetable-info">
             <h4 class="timetable-title">Mn -> Tue -> Wed -> <span class="timetable-title__day">THURSDAY, the tenth of November</span> <span class="timetable-title__fut">-> Fr</span> </h4>
