--- a/src/partials/article-header-g.html
+++ b/src/partials/article-header-g.html
@@ -1,10 +1,9 @@
-<div class="bloom-header">
-    <div class="vidget learn remember__mode">
-        <!-- <img src="./images/vidget/learn.png" width="40">
-    -->     <div class="done">
-
+<div class="bloom-header flex-row">
+    <div class="icon xl">
+        <svg class="icon" width="48" height="48">
+            <use href="./images/icon.svg#icon-flower"></use>
+        </svg>
     </div>
-        </div> 
     <div class="thumb">
         <h1 class="section-title skill-up">Guide. Data processing.</h1>
         <h2 class="aim">Know, understand how to handle routin mental processes</h2>
