--- a/src/partials/article-header-i.html
+++ b/src/partials/article-header-i.html
@@ -1,13 +1,12 @@
-<div class="bloom-header">
-    <div class="vidget learn remember__mode">
-        <!-- <img src="./images/vidget/learn.png" width="40">
-    -->     <div class="done">
-
+<div class="bloom-header flex-row">
+    <div class="icon xl">
+        <svg class="icon" width="48" height="48">
+            <use href="./images/icon.svg#icon-it"></use>
+        </svg>
     </div>
-        </div> 
-    <div class="thumb">
-        <h1 class="section-title skill-up">IT. Information technologies.</h1>
-        <h2 class="aim">Get the sertificate of IT user</h2>
-        <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto perferendis facilis a unde assumenda officiis doloremque molestias libero, adipisci quam incidunt distinctio. In unde quae eveniet labore iure, magni id?</p>
-    </div>
+        <div class="thumb">
+            <h1 class="section-title skill-up">IT. Information technologies.</h1>
+            <h2 class="aim">Get the sertificate of IT user</h2>
+            <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto perferendis facilis a unde assumenda officiis doloremque molestias libero, adipisci quam incidunt distinctio. In unde quae eveniet labore iure, magni id?</p>
+        </div>
 </div>
