--- a/src/partials/gadget.html
+++ b/src/partials/gadget.html
@@ -1,7 +1,5 @@
 <section class="hero-section gadget__bg">
     <div class="container">
-        <div class="hero-content">
-            <include src="./thumb_readme.html"></include>
-       </div>
+        <include src="./partials/article-header-i.html"></include>
     </div>
 </section>
