--- a/src/partials/article-header-g.html
+++ b/src/partials/article-header-g.html
@@ -1,12 +1,16 @@
-<div class="bloom-header flex-row">
-    <div class="icon xl">
-        <svg class="icon" width="48" height="48">
-            <use href="./images/icon.svg#icon-flower"></use>
-        </svg>
+<section class="section">
+    <div class="container">
+        <div class="bloom-header flex-row">
+            <div class="icon xl">
+                <svg class="icon" width="48" height="48">
+                    <use href="./images/icon.svg#icon-flower"></use>
+                </svg>
+            </div>
+            <div class="thumb">
+                <h1 class="section-title skill-up">Guide. Data processing.</h1>
+                <h2 class="aim">Know, understand how to handle routin mental processes</h2>
+                <p class="info">Collection of tasks Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quidem, quae illo adipisci dolore alias. Reprehenderit quam laborum nobis ea delectus non, labore, nisi molestiae sed odit debitis officiis consectetur!</p>
+            </div>
+        </div>
     </div>
-    <div class="thumb">
-        <h1 class="section-title skill-up">Guide. Data processing.</h1>
-        <h2 class="aim">Know, understand how to handle routin mental processes</h2>
-        <p class="info">Collection of tasks Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quidem, quae illo adipisci dolore alias. Reprehenderit quam laborum nobis ea delectus non, labore, nisi molestiae sed odit debitis officiis consectetur!</p>
-    </div>
-</div>
+</section>
