--- a/src/partials/article-header-t.html
+++ b/src/partials/article-header-t.html
@@ -1,12 +1,17 @@
-<div class="bloom-header flex-row">
-    <div class="icon xl">
-        <svg class="icon" width="48" height="48">
-            <use href="./images/icon.svg#icon-timetable"></use>
-        </svg>
-    </div>
-        <div class="thumb">
-            <h1 class="section-title skill-up">Time management. Algorythms.</h1>
-            <h2 class="aim">Solve problems. Keep to the deadlines</h2>
-            <p class="info">Time-magement is Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt laborum autem alias perspiciatis quam mollitia quia velit. Adipisci doloribus eos fugiat, pariatur, quasi quos quidem assumenda nam dolorem aspernatur dolore!</p>
+
+<section class="section">
+    <div class="container">
+        <div class="bloom-header flex-row">
+            <div class="icon xl">
+                <svg class="icon" width="48" height="48">
+                    <use href="./images/icon.svg#icon-timetable"></use>
+                </svg>
+            </div>
+            <div class="thumb">
+                    <h1 class="section-title skill-up">Time management. Algorythms.</h1>
+                    <h2 class="aim">Solve problems. Keep to the deadlines</h2>
+                    <p class="info">Time-magement is Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt laborum autem alias perspiciatis quam mollitia quia velit. Adipisci doloribus eos fugiat, pariatur, quasi quos quidem assumenda nam dolorem aspernatur dolore!</p>
+            </div>
         </div>
-</div>
+    </div>
+</section>
