--- a/src/partials/timetablepar.html
+++ b/src/partials/timetablepar.html
@@ -1,7 +1,5 @@
 <section class="section timetable__section">
     <div class="container timetable__container">
-        <include src="./partials/article-header-t.html"></include>
-       
         <div class="timetable-info">
             <h4 class="timetable-title">Mn -> Tue -> Wed -> <span class="timetable-title__day">THURSDAY, the tenth of November</span> <span class="timetable-title__fut">-> Fr</span> </h4>
             <ol class="timetable-list">
@@ -25,6 +23,8 @@
                     <a class="lesson__link" alt="7classEnglish" href="./health7.html">it      | 8 | __  Word. Lists. Find-replace</a>
                 </li>
             </ol>
+        </div>
+    </div>
 </section>
 
 
