--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -44,7 +44,7 @@
 }
 
 body {
-    background-color: $backgroundColor;
+    background-color: $darkBrownColor;
     font-family: 'Montserrat';
     color: $plainTextColor;
     font-size: 14px;
