--- a/src/partials/article-header-s.html
+++ b/src/partials/article-header-s.html
@@ -1,17 +1,20 @@
-
-
-<div class="bloom-header flex-row">
-    <div class="icon xl">
-        <svg class="icon" width="48" height="48">
-            <use href="./images/icon.svg#icon-timetable"></use>
-        </svg>
+<section class="section">
+    <div class="container">
+        <div class="bloom-header flex-row">
+            <div class="icon xl">
+                        <svg class="icon" width="48" height="48">
+                            <use href="./images/icon.svg#icon-docs"></use>
+                        </svg>
+            </div>
+            <div class="thumb">
+                        <h1 class="section-title skill-up">Storage. Data protection</h1>
+                        <h2 class="aim">Know, understand and use data saving</h2>
+                        <p class="info">Saving data is one of the most important skills. We have a large collection links Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore unde obcaecati expedita odio esse quis deserunt itaque, eius voluptates ut fugiat alias amet asperiores aliquam commodi fugit dicta, rem blanditiis!</p>
+            </div>
+        </div>
     </div>
-    <div class="thumb">
-        <h1 class="section-title skill-up">Storage. Data protection</h1>
-        <h2 class="aim">Know, understand and use data saving</h2>
-        <p class="info">Saving data is one of the most important skills. We have a large collection links</p>
-    </div>
-</div>
+</section>
+
 
 
 
