--- a/src/partials/article-header.html
+++ b/src/partials/article-header.html
@@ -1,7 +1,22 @@
-<div class="bloom-header">
-    <div class="thumb">
-        <h1 class="section-title skill-up">Storage. Data protection</h1>
-        <h2 class="aim">Know, understand and use data saving</h2>
-        <p class="info">Saving data is one of the most important skills. We have a large collection links</p>
+<section class="section">
+    <div class="container">
+        <div class="bloom-header flex-row">
+            <div class="icon xl">
+                        <svg class="icon" width="48" height="48">
+                            <use href="./images/icon.svg#icon-home"></use>
+                        </svg>
+            </div>
+            <div class="thumb">
+                        <h1 class="section-title skill-up">Index page. readme.txt Start.</h1>
+                        <h2 class="aim">Get ready to work. Find information and tools</h2>
+                        <p class="info">First aff all you have to read readme.txt and use it for reference Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore unde obcaecati expedita odio esse quis deserunt itaque, eius voluptates ut fugiat alias amet asperiores aliquam commodi fugit dicta, rem blanditiis!</p>
+            </div>
+        </div>
     </div>
-</div>
+</section>
+
+
+
+
+
+
