--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -62,26 +62,25 @@
 }
 
 .guide__bg{
-    background:  url(../images/map-bg.jpg), linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(22,121,9,0.7) 21%, rgba(13,83,5,1) 100%);
+    background:  url(../images/layout/layout-lesson.png), wheat;
     background-size: 100vw;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center top;
 }
 
 
 .home__bg{
     background-size: 460px;
     background-repeat: no-repeat;
-    background-position: center;
-    background-image:  url(../images/layout/layout-lesson.png);
+    background-position: center top;
+    background-color: tomato;
+    background-image:  url(../images/layout/id.jpg);
 
     @include tablet{
         background-size: 760px;
-    background-image:  url(../images/layout/layout-lesson.png);
     }
     @include desktop{
         background-size: 1200px;
-    background-image:  url(../images/layout/study.png);
     }
    
   
@@ -91,15 +90,15 @@
     background-size: $mobWidth $mobHeight;
     background-repeat: no-repeat;
     background-position: top center;
-    background-image:  url(../images/layout/smphone.svg);
+    background-image:  url(../images/layout/smphone.jpg);
 
     @include tablet{
     background-size: $tabWidth $tabHeight;
-    background-image:  url(../images/layout/tab.svg);
+    background-image:  url(../images/layout/tab.jpg);
 }
     @include desktop{
        background-size: $pcWidth $pcHeight;
-    background-image:  url(../images/layout/comp-pc.svg);
+    background-image:  url(../images/layout/comp-pc.jpg);
     }
    
   
@@ -110,16 +109,14 @@
     background-size: 100vw;
     background-repeat: no-repeat;
     background-position: center 150px;
-    background:  url(../images/layout/study.png);
+    background:  url(../images/layout/comp-timetable.png);
     background-size: cover;
 }
 
 .storage__bg{
     background-size:100vw;
     background-repeat: no-repeat;
-    background-position: left bottom;
-    background-image:  url(../images/layout/storage.jpg);
-    
-   
-  
+    background-position: center top;
+    background-color: tomato;
+    background-image:  url(../images/layout/study.png);
 }
