--- a/src/partials/recentlinks.html
+++ b/src/partials/recentlinks.html
@@ -7,7 +7,8 @@
                         <use href="./images/icon.svg#icon-link"></use>
                     </svg>Useful Links:</h4>
                 </li>
-                <li><a class="recent-link it-font"href="https://www.youtube.com/" title="URL adress"> https://www.youtube.com/</a>
+                <li><a class="recent-link it-font" href="https://sites.google.com/view/stemcitysav/%D0%B2%D1%81%D1%82%D1%83%D0%BF" title="STEM 5 class">STEM 5 class</a></li>
+                <li><a class="recent-link it-font" href="https://www.youtube.com/" title="URL adress"> https://www.youtube.com/</a>
                 </li>
                 <li> <a class="recent-link it-font" href="https://www.google.com.ua/"> https://www.google.com.ua/</a>
                 </li>
