--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -109,7 +109,7 @@
     background-size: 100vw;
     background-repeat: no-repeat;
     background-position: center 150px;
-    background:  url(../images/layout/comp-timetable.png);
+    background:  url(../images/layout/timetable-pc.jpg);
     background-size: cover;
 }
 
