--- a/src/sass/compon/_steps.scss
+++ b/src/sass/compon/_steps.scss
@@ -198,29 +198,9 @@
     }
 }
 
-.undone{
-    // &::after{
-    //     content: "";
-    //     position: absolute;
-    //     top: 0;
-    //     right: -30%;
-
-    //     display: inline-block;
-    //     width: 16px;
-    //     height: 16px;
-    //     background-color: white;
-    //     //border: 1px solid white;
-    //     background-image: url(../images/icons/question.svg);
-    //     background-repeat: no-repeat;
-    //     background-position: center;
-    //     background-size: 10px 10px;
-
-    //     border-radius: 4px;
-    // }
-}
 
 .step-link-title{
-    background-color: $yellowColor;
+    background-color: var(--accentColor);
 }
 
 .steps{
