--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -86,7 +86,7 @@
   
 }
 
-.gadget__bg{
+.gadget__bg, .timetable__bg{
     background-size: $mobWidth $mobHeight;
     background-repeat: no-repeat;
     background-position: top center;
@@ -106,7 +106,6 @@
 
 
 .timetable__bg{
-    background-size: 100vw;
     background-repeat: no-repeat;
     background-position: center 150px;
     background:  url(../images/layout/timetable-pc.jpg);
@@ -114,9 +113,19 @@
 }
 
 .storage__bg{
-    background-size:100vw;
+    background-size: $mobWidth $mobHeight;
     background-repeat: no-repeat;
     background-position: center top;
     background-color: tomato;
+    background-image:  url(../images/layout/study-sm.png);
+
+    @include tablet{
+    background-size: $tabWidth $tabHeight;
     background-image:  url(../images/layout/study.png);
+}
+    @include desktop{
+       background-size: $pcWidth $pcHeight;
+       background-image:  url(../images/layout/study.png);
+    }
+   
 }
