--- a/src/partials/backdrop.html
+++ b/src/partials/backdrop.html
@@ -40,7 +40,7 @@
                         <span class="validation__icon"></span>
                         
                         
-                        Погоджуюся з розсилкою та приймаю <a class="form__link" href="">Умови договору</a>
+                        Погоджуюся з розсилкою та приймаю.<a class="form__link" href="">Умови договору</a>
                     </label>
                 </div>
             </div>
