--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,7 @@
 <section class="hero-section home__bg">
     <div class="container">
         <div class="hero-container">
+            I'm a hero
         </div>
         
     </div>
