--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -1,10 +1,11 @@
+// стиль заголовків
 .heading{
     font-family: 'Freckle Face', cursive;
     font-weight: 14px;
     letter-spacing: 1px;
     font-size: 40px;
 }
-
+// стиль айтішний
 .it-font{
     font-family: 'IBM Plex Mono', monospace;
     color: black;
@@ -16,4 +17,16 @@
 
 .fancy-font{
      font-family: 'Finger Paint', cursive;
+}
+
+.tip{
+    font-family: 'IBM Plex Mono', monospace;
+    color: white;
+    background-color: blue;
+    display: inline-block;
+    width: auto;
+    height: auto;
+    border: 1px solid white;
+    border-radius: 3px;
+    padding: 3px;
 }
